--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --main-title-color: #212121;
   --main-text-color: #757575;
@@ -53,6 +52,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  width: 100%;
 }
 
 body {
@@ -70,15 +70,36 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 /* Modal */
@@ -411,17 +432,43 @@ body {
   color: #000000;
 }
 
-/* ГЕРОЙ */
 .hero {
-  height: 600px;
+  height: 400px;
   background-color: #2f303a;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
   display: flex;
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero .box {
+    background-image: url(../images/hero-bg-mob-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tab.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero .box {
+    background-image: url(../images/hero-bg-tab-2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-des.jpg);
+  }
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero .box {
+    background-image: url(../images/hero-bg-des-2x.jpg);
+  }
 }
 
 .hero__container {
@@ -429,21 +476,50 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .hero__container {
+    max-width: 720px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__container {
+    max-width: 1200px;
+  }
 }
 
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 20px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-background-color);
   margin-bottom: 30px;
 }
+@media screen and (min-width: 480px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 
 .btn {
-  min-width: 216px;
+  min-width: 200px;
   height: 50px;
   font-family: "Roboto";
   font-weight: 700;
@@ -457,15 +533,35 @@ body {
   border-radius: 4px;
   border: var(--main-accent-color);
 }
+@media screen and (min-width: 1200px) {
+  .btn {
+    min-width: 216px;
+  }
+}
 
 /* FEATURE */
 .card__list {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
+}
+
+.card__list-item {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .card__list-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card__list-item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .card__list-wrap {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -485,8 +581,14 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
   color: var(--main-title-color);
   margin-bottom: 10px;
+}
+@media screen and (min-width: 768px) {
+  .card__list-title {
+    text-align: left;
+  }
 }
 
 .card__list-text {
@@ -549,19 +651,35 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+  }
 }
 
 .person__list {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
 }
 
 .person__list-item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+@media screen and (min-width: 768px) {
+  .person__list-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .person__list-item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .person__list-wrap {
@@ -628,22 +746,40 @@ body {
 /* CLIENT */
 .client__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .client__title {
+    font-size: 36px;
+    margin-bottom: 50px;
+    line-height: 1.17;
+  }
 }
 
 .icon__list {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
 }
 
 .icon__list-item {
-  width: calc((100% - 150px) / 6);
+  width: calc((100% - 30px) / 2);
   height: 92px;
+}
+@media screen and (min-width: 768px) {
+  .icon__list-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .icon__list-item {
+    width: calc((100% - 150px) / 6);
+  }
 }
 
 .icon__list-link {
@@ -855,8 +991,15 @@ body {
 
 .filter__list {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  gap: 8px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  justify-content: flex-start;
+}
+@media screen and (min-width: 768px) {
+  .filter__list {
+    justify-content: center;
+  }
 }
 
 .filter-button {
@@ -887,12 +1030,22 @@ body {
 }
 
 .gallery__list-item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
   transition-property: box-shadow;
   transition: var(--main-transition-duration) var(--main-transition-timing-function);
 }
 .gallery__list-item:hover, .gallery__list-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+@media screen and (min-width: 768px) {
+  .gallery__list-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery__list-item {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .gallery__list-top-wrap {
