--- a/sass/layouts/_client.scss
+++ b/sass/layouts/_client.scss
@@ -1,20 +1,32 @@
 /* CLIENT */
 .client__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @include desktop {
+    font-size: 36px;
+    margin-bottom: 50px;
+    line-height: 1.17;
+  }
 }
 .icon__list {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
 }
 .icon__list-item {
-  width: calc((100% - 150px) / 6);
+  width: calc((100% - 30px) / 2);
   height: 92px;
+  @include tablet {
+    width: calc((100% - 60px) / 3);
+  }
+  @include desktop {
+    width: calc((100% - 150px) / 6);
+  }
 }
 .icon__list-link {
   width: 100%;
