--- a/sass/layouts/_feature.scss
+++ b/sass/layouts/_feature.scss
@@ -2,9 +2,19 @@
 .card__list {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
+}
+.card__list-item {
+  width: 100%;
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+  @include desktop {
+    width: calc((100% - 90px) / 4);
+  }
 }
 .card__list-wrap {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -22,8 +32,12 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
   color: var(--main-title-color);
   margin-bottom: 10px;
+  @include tablet {
+    text-align: left;
+  }
 }
 .card__list-text {
   font-size: 14px;
