--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,37 +1,95 @@
-/* ГЕРОЙ */
 .hero {
-  height: 600px;
+  height: 400px;
   background-color: #2f303a;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero-bg.jpg);
+    url(../images/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
   display: flex;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .box {
+      background-image: url(../images/hero-bg-mob-2x.jpg);
+    }
+  }
+  @include tablet {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-bg-tab.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      .box {
+        background-image: url(../images/hero-bg-tab-2x.jpg);
+      }
+    }
+  }
+  @include desktop {
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-bg-des.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .box {
+      background-image: url(../images/hero-bg-des-2x.jpg);
+    }
+  }
 }
+
 .hero__container {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  max-width: 100%;
+  @include tablet {
+    max-width: 720px;
+  }
+  @include desktop {
+    max-width: 1200px;
+  }
 }
+
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 20px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-background-color);
   margin-bottom: 30px;
+  @include mobile {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+  @include tablet {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+  @include desktop {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
+
 .btn {
-  min-width: 216px;
+  min-width: 200px;
   height: 50px;
   font-family: "Roboto";
   font-weight: 700;
@@ -44,4 +102,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: var(--main-accent-color);
+  @include desktop {
+    min-width: 216px;
+  }
 }
