--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -9,18 +9,28 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @include desktop {
+    margin-bottom: 50px;
+  }
 }
 .person__list {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
 }
 .person__list-item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+  @include desktop {
+    width: calc((100% - 90px) / 4);
+  }
 }
 .person__list-wrap {
   padding-top: 30px;
