--- a/sass/layouts/_logo.scss
+++ b/sass/layouts/_logo.scss
@@ -5,17 +5,25 @@
 .logo__start {
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--main-accent-color);
+  @include desktop {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 .logo__finish {
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
+  @include desktop {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 .logo__finish--light {
   color: var(--main-background-color);
