--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -10,7 +10,11 @@ body {
 .link {
   text-decoration: none;
 }
-
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
