--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,11 +6,40 @@
 }
 .footer__container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
+  margin-left: auto;
+  @include tablet {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+  @include desktop {
+    flex-wrap: nowrap;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+}
+.contact__footer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  @include desktop {
+    align-items: flex-start;
+  }
 }
 .address__list {
   margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+  @include desktop {
+    margin-bottom: 0;
+    align-items: flex-start;
+  }
 }
 .address__list-item {
   margin-bottom: 9px;
@@ -57,6 +86,16 @@
     color: var(--main-accent-color);
   }
 }
+.footer__soc {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+  @include desktop {
+    margin-bottom: 0px;
+    align-items: flex-start;
+  }
+}
 .footer__soc-title {
   font-weight: 700;
   font-size: 14px;
@@ -101,6 +140,19 @@
     fill: var(--main-background-color);
   }
 }
+.subscription {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @include tablet {
+    margin: auto;
+  }
+  @include desktop {
+    margin: 0;
+    flex-direction: row;
+    display: block;
+  }
+}
 .subscription__label {
   font-weight: 700;
   font-size: 14px;
@@ -112,13 +164,15 @@
   display: block;
 }
 .subscription__input {
-  width: 358px;
+  margin-bottom: 20px;
+  width: 300px;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
+  margin-right: 15px;
+  margin-left: 15px;
   padding-right: 16px;
   padding-left: 16px;
   color: var(--main-background-color);
@@ -137,6 +191,13 @@
     color: var(--main-background-color);
     border-color: var(--main-accent-color);
     outline: transparent;
+  }
+  @include mobile {
+    width: 450px;
+  }
+  @include desktop {
+    width: 358px;
+    margin-left: auto;
   }
 }
 .subscription__button {
