--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,9 +6,11 @@
   margin: 0 auto;
 }
 .menu {
-  // display: flex;
   display: none;
   gap: 50px;
+  @include tablet {
+    display: flex;
+  }
 }
 .navigation {
   display: flex;
@@ -20,10 +22,20 @@
   align-items: center;
 }
 .header__contact {
-  // display: flex;
   display: none;
   margin-left: auto;
   gap: 50px;
+  @include tablet {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: flex-end;
+    flex-direction: column;
+  }
+  @include desktop {
+    gap: 50px;
+    flex-direction: row;
+  }
 }
 .menu__link {
   font-weight: 500;
@@ -85,17 +97,30 @@
   position: fixed;
   padding-top: 10px;
   padding-bottom: 48px;
+  > .mob-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+  }
 }
 .menu__open {
   border: transparent;
   background: transparent;
   margin-left: auto;
   fill: var(--main-title-color);
+  @include tablet {
+    display: none;
+  }
 }
 .menu-close {
+  width: 40px;
+  height: 40px;
   border: transparent;
   background: transparent;
   position: absolute;
+  top: 10px;
   right: 15px;
   cursor: pointer;
   transition-property: fill;
@@ -108,9 +133,13 @@
 }
 .mob-container {
   padding: 48px 40px;
+  position: relative;
 }
-.mob__nav {
-  margin-bottom: 302px;
+.mob-menu-top {
+  margin-bottom: 30px;
+}
+.mob__nav-item .current {
+  color: var(--main-accent-color);
 }
 .mob__nav-item:not(:last-child) {
   margin-bottom: 32px;
@@ -136,10 +165,13 @@
 }
 .mob__contact-tel {
   font-weight: 500;
-  font-size: 34px;
+  font-size: 27px;
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: var(--main-accent-color);
+  @include mobile {
+    font-size: 34px;
+  }
 }
 .mob__contact-mail {
   font-weight: 500;
@@ -151,13 +183,25 @@
 .mob-soc-list {
   display: flex;
   gap: 20px;
+  position: relative;
+}
+.mob-soc-item::before {
+  content: "";
+  width: 22px;
+  height: 1px;
+  background-color: rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  position: absolute;
 }
 .mob-soc-item {
 }
 .mob-soc-link {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 12px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--main-accent-color);
+  @include mobile {
+    font-size: 18px;
+  }
 }
