--- a/css/main.css
+++ b/css/main.css
@@ -328,10 +328,16 @@ body {
 
 /* HEADER */
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
   margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 
 .menu {
@@ -399,14 +405,19 @@ body {
   background-color: var(--main-accent-color);
   border-radius: 2px;
   position: absolute;
-  bottom: -32px;
+  bottom: -41px;
   left: 0;
   right: 0;
+}
+@media screen and (min-width: 1200px) {
+  .menu__link.current::after {
+    bottom: -32px;
+  }
 }
 
 .contact__link {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
@@ -415,6 +426,11 @@ body {
 }
 .contact__link:focus, .contact__link:hover {
   color: var(--main-accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .contact__link {
+    font-size: 14px;
+  }
 }
 
 .icon-envelope {
@@ -534,17 +550,13 @@ body {
 
 .mob-soc-list {
   display: flex;
-  gap: 20px;
   position: relative;
 }
 
-.mob-soc-item::before {
-  content: "";
-  width: 22px;
-  height: 1px;
-  background-color: rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
-  position: absolute;
+.mob-soc-item {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .mob-soc-link {
@@ -822,7 +834,7 @@ body {
 
 .team__title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
@@ -832,6 +844,7 @@ body {
 @media screen and (min-width: 1200px) {
   .team__title {
     margin-bottom: 50px;
+    font-size: 36px;
   }
 }
 
@@ -1257,6 +1270,14 @@ body {
 @media screen and (min-width: 768px) {
   .filter__list {
     justify-content: center;
+    margin-bottom: 30px;
+    gap: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter__list {
+    margin-bottom: 40px;
+    gap: 8px;
   }
 }
 
@@ -1271,7 +1292,6 @@ body {
   background-color: var(--second-background-color);
   border-radius: 4px;
   border: #ffffff;
-  margin-right: 8px;
   padding: 6px 22px;
   transition: background-color var(--main-transition-duration) var(--main-transition-timing-function), color var(--main-transition-duration) var(--main-transition-timing-function), box-shadow var(--main-transition-duration) var(--main-transition-timing-function);
 }
