--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,9 +1,13 @@
 /* HEADER */
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
   margin: 0 auto;
+  @include tablet {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 .menu {
   display: none;
@@ -61,14 +65,17 @@
     background-color: var(--main-accent-color);
     border-radius: 2px;
     position: absolute;
-    bottom: -32px;
+    bottom: -41px;
     left: 0;
     right: 0;
+    @include desktop {
+      bottom: -32px;
+    }
   }
 }
 .contact__link {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
@@ -78,6 +85,9 @@
   &:focus,
   &:hover {
     color: var(--main-accent-color);
+  }
+  @include desktop {
+    font-size: 14px;
   }
 }
 .icon-envelope {
@@ -182,19 +192,14 @@
 }
 .mob-soc-list {
   display: flex;
-  gap: 20px;
   position: relative;
 }
-.mob-soc-item::before {
-  content: "";
-  width: 22px;
-  height: 1px;
-  background-color: rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
-  position: absolute;
-}
 .mob-soc-item {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+  padding-left: 10px;
 }
+
 .mob-soc-link {
   font-weight: 500;
   font-size: 12px;
