--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -10,6 +10,12 @@
   justify-content: flex-start;
   @include tablet {
     justify-content: center;
+    margin-bottom: 30px;
+    gap: 15px;
+  }
+  @include desktop {
+    margin-bottom: 40px;
+    gap: 8px;
   }
 }
 .filter-button {
@@ -23,7 +29,6 @@
   background-color: var(--second-background-color);
   border-radius: 4px;
   border: #ffffff;
-  margin-right: 8px;
   padding: 6px 22px;
   transition: background-color var(--main-transition-duration)
       var(--main-transition-timing-function),
